first NPM release

--- a/package.json
+++ b/package.json
@@ -4,9 +4,13 @@
         "iotql": "./bin/iotql"
     }, 
     "bugs": {
-        "url": "https://github.com/dpjanes/iotdb-iotql/issues"
+        "url": "https://github.com/dpjanes/iotql/issues"
     }, 
-    "dependencies": {}, 
+    "dependencies": {
+        "iotdb-transport": "~0.0.6", 
+        "iotdb-transport-fs": "~0.0.13", 
+        "iotdb-transport-iotdb": "~0.0.9"
+    }, 
     "description": "IoTQL - SQL-like query language for the IoT", 
     "devDependencies": {
         "grunt": "~0.4.5", 
@@ -23,21 +27,18 @@
     "homestar": {}, 
     "license": "Apache-2.0", 
     "main": "index.js", 
-    "name": "iotdb-iotql", 
+    "name": "iotql", 
     "peerDependencies": {
-        "minimist": "~0.8.3", 
-        "iotdb": "~0.8.3", 
-        "iotdb-transport": "~0.0.11", 
-        "iotdb-transport-fs": "~0.0.11", 
-        "iotdb-transport-iotdb": "~0.0.8"
+        "iotdb": "~0.9.2", 
+        "minimist": "~1.1.2"
     }, 
     "private": false, 
     "repository": {
         "type": "git", 
-        "url": "https://github.com/dpjanes/iotdb-iotql"
+        "url": "https://github.com/dpjanes/iotql"
     }, 
     "scripts": {
         "test": "grunt"
     }, 
-    "version": "0.0.2"
+    "version": "0.0.3"
 }
