--- a/package.json
+++ b/package.json
@@ -14,14 +14,16 @@
     "description": "IoTQL - SQL-like query language for the IoT", 
     "devDependencies": {
         "grunt": "~0.4.5", 
-        "grunt-contrib-jshint": "~0.10.0", 
-        "grunt-contrib-nodeunit": "~0.2.0", 
-        "grunt-contrib-uglify": "~0.5.0", 
-        "grunt-contrib-watch": "~0.5.0", 
-        "grunt-jsbeautifier": "^0.2.7", 
-        "jshint-stylish": "~0.1.3", 
-        "load-grunt-tasks": "~0.2.0", 
-        "request": "^2.36.0"
+        "grunt-contrib-jshint": "~0.11.2", 
+        "grunt-contrib-nodeunit": "~0.4.1", 
+        "grunt-contrib-uglify": "~0.9.1", 
+        "grunt-contrib-watch": "~0.6.1", 
+        "grunt-jsbeautifier": "~0.2.10", 
+        "jison": "~0.4.15", 
+        "jshint-stylish": "~2.0.1", 
+        "json-rpc2": "~1.0.1", 
+        "load-grunt-tasks": "~3.2.0", 
+        "request": "~2.60.0"
     }, 
     "homepage": "https://homestar.io", 
     "homestar": {}, 
