--- a/package.json
+++ b/package.json
@@ -7,11 +7,11 @@
         "url": "https://github.com/dpjanes/iotql/issues"
     }, 
     "dependencies": {
-        "mkdirp": "~0.5.1", 
         "async": "~1.4.2", 
-        "iotdb-transport": "~0.0.6", 
+        "iotdb-transport": "~0.0.7", 
         "iotdb-transport-fs": "~0.0.13", 
-        "iotdb-transport-iotdb": "~0.0.9"
+        "iotdb-transport-iotdb": "~0.0.10", 
+        "mkdirp": "~0.5.1"
     }, 
     "description": "IoTQL - SQL-like query language for the IoT", 
     "devDependencies": {
@@ -33,8 +33,8 @@
     "main": "index.js", 
     "name": "iotql", 
     "peerDependencies": {
-        "iotdb": "~0.9.2", 
-        "minimist": "~1.1.2"
+        "iotdb": "~0.9.3", 
+        "minimist": "~1.1.3"
     }, 
     "private": false, 
     "repository": {
@@ -44,5 +44,5 @@
     "scripts": {
         "test": "grunt"
     }, 
-    "version": "0.0.6"
+    "version": "0.0.7"
 }
