--- a/package.json
+++ b/package.json
@@ -8,9 +8,11 @@
     }, 
     "dependencies": {
         "async": "~1.4.2", 
-        "iotdb-transport": "~0.0.8", 
+        "iotdb": "~0.9.3", 
+        "iotdb-transport": "~0.0.9", 
         "iotdb-transport-fs": "~0.0.14", 
         "iotdb-transport-iotdb": "~0.0.11", 
+        "minimist": "~1.1.3", 
         "mkdirp": "~0.5.1"
     }, 
     "description": "IoTQL - SQL-like query language for the IoT", 
@@ -33,8 +35,7 @@
     "main": "index.js", 
     "name": "iotql", 
     "peerDependencies": {
-        "iotdb": "~0.9.3", 
-        "minimist": "~1.1.3"
+        "iotdb": "~0.9.3"
     }, 
     "private": false, 
     "repository": {
@@ -44,5 +45,5 @@
     "scripts": {
         "test": "grunt"
     }, 
-    "version": "0.0.8"
+    "version": "0.0.13"
 }
