--- a/package.json
+++ b/package.json
@@ -9,11 +9,11 @@
     }, 
     "dependencies": {
         "async": "~1.4.2", 
-        "iotdb": "~0.10.3", 
-        "iotdb-transport": "~0.0.10", 
-        "iotdb-transport-fs": "~0.0.16", 
-        "iotdb-transport-iotdb": "~0.0.12", 
-        "iotdb-transport-null": "~0.0.5", 
+        "iotdb": ">=0.10.0", 
+        "iotdb-transport": "~0.0.13", 
+        "iotdb-transport-fs": "~0.0.17", 
+        "iotdb-transport-iotdb": "~0.0.13", 
+        "iotdb-transport-null": "~0.0.6", 
         "minimist": "~1.2.0", 
         "mkdirp": "~0.5.1"
     }, 
@@ -27,18 +27,15 @@
         "grunt-jsbeautifier": "~0.2.10", 
         "jison": "~0.4.15", 
         "jshint-stylish": "~2.0.1", 
-        "json-rpc2": "~1.0.1", 
+        "json-rpc2": "~1.0.2", 
         "load-grunt-tasks": "~3.2.0", 
-        "request": "~2.61.0"
+        "request": "~2.62.0"
     }, 
     "homepage": "https://homestar.io", 
     "homestar": {}, 
     "license": "Apache-2.0", 
     "main": "index.js", 
     "name": "iotql", 
-    "peerDependencies": {
-        "iotdb": "~0.10.3"
-    }, 
     "private": false, 
     "repository": {
         "type": "git", 
@@ -47,5 +44,5 @@
     "scripts": {
         "test": "grunt"
     }, 
-    "version": "0.0.19"
+    "version": "0.0.21"
 }
