--- a/package.json
+++ b/package.json
@@ -25,6 +25,7 @@
         "grunt-contrib-uglify": "~0.9.2", 
         "grunt-contrib-watch": "~0.6.1", 
         "grunt-jsbeautifier": "~0.2.10", 
+        "grunt-run": "~0.5.1",
         "jison": "~0.4.15", 
         "jshint-stylish": "~2.0.1", 
         "json-rpc2": "~1.0.2", 
