--- a/package.json
+++ b/package.json
@@ -8,29 +8,31 @@
         "url": "https://github.com/dpjanes/iotql/issues"
     }, 
     "dependencies": {
-        "async": "~1.5.2", 
-        "iotdb": ">=0.12.0", 
-        "iotdb-transport": "~0.0.30", 
-        "iotdb-transport-fs": "~0.0.23", 
-        "iotdb-transport-iotdb": "~0.0.19", 
-        "iotdb-transport-null": "~0.0.12", 
+        "async": "~2.0.0-rc.6", 
+        "iotdb": ">=0.14.0", 
+        "iotdb-errors": "~0.0.3", 
+        "iotdb-helpers": "~0.0.1", 
+        "iotdb-transport": "~0.0.35", 
+        "iotdb-transport-fs": "~0.0.25", 
+        "iotdb-transport-iotdb": "~0.0.22", 
+        "iotdb-transport-null": "~0.0.14", 
         "minimist": "~1.2.0", 
         "mkdirp": "~0.5.1"
     }, 
     "description": "IoTQL - SQL-like query language for the IoT", 
     "devDependencies": {
-        "grunt": "~0.4.5", 
-        "grunt-contrib-jshint": "~0.12.0", 
-        "grunt-contrib-nodeunit": "~0.4.1", 
-        "grunt-contrib-uglify": "~0.11.1", 
-        "grunt-contrib-watch": "~0.6.1", 
-        "grunt-jsbeautifier": "~0.2.10", 
-        "grunt-run": "~0.5.2", 
+        "grunt": "~1.0.1", 
+        "grunt-contrib-jshint": "~1.0.0", 
+        "grunt-contrib-nodeunit": "~1.0.0", 
+        "grunt-contrib-uglify": "~1.0.1", 
+        "grunt-contrib-watch": "~1.0.0", 
+        "grunt-jsbeautifier": "~0.2.12", 
+        "grunt-run": "~0.6.0", 
         "jison": "~0.4.17", 
-        "jshint-stylish": "~2.1.0", 
+        "jshint-stylish": "~2.2.0", 
         "json-rpc2": "~1.0.2", 
-        "load-grunt-tasks": "~3.4.0", 
-        "request": "~2.69.0"
+        "load-grunt-tasks": "~3.5.0", 
+        "request": "~2.72.0"
     }, 
     "homepage": "https://homestar.io", 
     "homestar": {}, 
