--- a/package.json
+++ b/package.json
@@ -8,14 +8,14 @@
         "url": "https://github.com/dpjanes/iotql/issues"
     }, 
     "dependencies": {
-        "async": "~2.0.0-rc.6", 
-        "canonical-json": "",
-        "iotdb": ">=0.14.0", 
-        "iotdb-errors": "~0.0.3", 
-        "iotdb-helpers": "~0.0.1", 
-        "iotdb-transport": "~0.0.35", 
-        "iotdb-transport-fs": "~0.0.25", 
-        "iotdb-transport-iotdb": "~0.0.22", 
+        "async": "~2.0.1", 
+        "canonical-json": "~0.0.4", 
+        "iotdb": ">=3.0.0", 
+        "iotdb-errors": "~3.0.2", 
+        "iotdb-helpers": "~3.0.5", 
+        "iotdb-transport": "~3.0.2", 
+        "iotdb-transport-fs": "~3.0.1", 
+        "iotdb-transport-iotdb": "~3.0.1", 
         "iotdb-transport-null": "~0.0.14", 
         "minimist": "~1.2.0", 
         "mkdirp": "~0.5.1"
@@ -25,15 +25,15 @@
         "grunt": "~1.0.1", 
         "grunt-contrib-jshint": "~1.0.0", 
         "grunt-contrib-nodeunit": "~1.0.0", 
-        "grunt-contrib-uglify": "~1.0.1", 
+        "grunt-contrib-uglify": "~2.0.0", 
         "grunt-contrib-watch": "~1.0.0", 
-        "grunt-jsbeautifier": "~0.2.12", 
+        "grunt-jsbeautifier": "~0.2.13", 
         "grunt-run": "~0.6.0", 
         "jison": "~0.4.17", 
-        "jshint-stylish": "~2.2.0", 
+        "jshint-stylish": "~2.2.1", 
         "json-rpc2": "~1.0.2", 
-        "load-grunt-tasks": "~3.5.0", 
-        "request": "~2.72.0"
+        "load-grunt-tasks": "~3.5.2", 
+        "request": "~2.74.0"
     }, 
     "homepage": "https://homestar.io", 
     "homestar": {}, 
@@ -49,5 +49,5 @@
         "postinstall": "node bin/postinstall.js", 
         "test": "grunt"
     }, 
-    "version": "0.0.37"
+    "version": "3.0.1"
 }
